--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -85,5 +85,16 @@
         android:textSize="20dp"
         app:layout_constraintTop_toBottomOf="@id/humidity"
         app:layout_constraintStart_toStartOf="@id/temperature"/>
+    <Button
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="24dp"
+        android:backgroundTint="@color/grey"
+        android:textColor="@color/black"
+        android:text="@string/forecast_button"
+        android:onClick="openForecast"
+        app:layout_constraintTop_toBottomOf="@id/pressure"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
