--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
         app:layout_constraintTop_toBottomOf="@id/city_name"
         app:layout_constraintStart_toStartOf="parent"/>
     <ImageView
+        android:id="@+id/currentIcon"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:src="@drawable/sun"
