--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -20,7 +20,7 @@
     <Button
         android:id="@+id/zipCodeButton"
         android:layout_width="150dp"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         android:text="Submit"
         android:gravity="center"
         android:layout_marginTop="20dp"
@@ -28,4 +28,13 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/zipCodeEditText"/>
 
+    <Button
+        android:id="@+id/getLocationButton"
+        android:layout_width="150dp"
+        android:layout_height="60dp"
+        android:text="current location"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/zipCodeButton"
+        app:layout_constraintStart_toStartOf="@id/zipCodeButton"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
