--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -19,7 +19,7 @@
 
     <Button
         android:id="@+id/zipCodeButton"
-        android:layout_width="150dp"
+        android:layout_width="155dp"
         android:layout_height="60dp"
         android:text="Submit"
         android:gravity="center"
@@ -30,11 +30,19 @@
 
     <Button
         android:id="@+id/getLocationButton"
-        android:layout_width="150dp"
+        android:layout_width="155dp"
         android:layout_height="60dp"
         android:text="current location"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/zipCodeButton"
+        app:layout_constraintStart_toStartOf="@id/zipCodeButton"
+        />
+    <Button
+        android:id="@+id/notificationButton"
+        android:layout_width="155dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@id/getLocationButton"
         app:layout_constraintStart_toStartOf="@id/zipCodeButton"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
